Implmented property Details and summary

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -258,5 +258,8 @@
         <argument
             android:name="property"
             app:argType="be.kuleuven.elcontador10.background.model.Property" />
+        <action
+            android:id="@+id/action_propertyViewPageHolder_to_transactionDisplay"
+            app:destination="@id/transactionDisplay" />
     </fragment>
 </navigation>
