--- a/app/src/main/res/layout/rec_view_item_all_micros.xml
+++ b/app/src/main/res/layout/rec_view_item_all_micros.xml
@@ -86,6 +86,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="$8,000.00"
+            android:visibility="gone"
             android:gravity="start"
 
             android:ellipsize="marquee"
