--- a/app/src/main/res/layout/fragment_add_new_property.xml
+++ b/app/src/main/res/layout/fragment_add_new_property.xml
@@ -1,45 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
-android:layout_height="match_parent">
+android:layout_height="wrap_content">
 
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.appcompat.widget.LinearLayoutCompat
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingHorizontal="20dp"
     android:paddingBottom="20dp"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".fragments.transactions.NewTransaction.TransactionNew">
 
     <EditText
         android:id="@+id/ed_txt_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:padding="10dp"
         android:layout_marginTop="30dp"
         android:hint="@string/name"
         android:inputType="text"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:autofillHints="" />
+    <TextView
+        android:id="@+id/text_newTransaction_wordCounter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_gravity="left"
+        android:textColor="@color/light_grey"
+        android:layout_marginStart="5dp" />
+    <TextView
+        android:id="@+id/actv_stakeholder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="@string/stakeholder"
+        android:textSize="18sp" />
 
+    <TextView
+        android:id="@+id/text_stakeholderSelected"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:gravity="left"
+        android:layout_marginTop="5dp"
+        android:background="@color/rec_view_gray"
+        android:text="@string/none"
+        android:textColor="@color/white"
+        />
 
     <Button
         android:id="@+id/btn_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/background_buttons"
+        android:text="@string/confirm" />
+</androidx.appcompat.widget.LinearLayoutCompat>
 
-        android:text="@string/confirm"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_txt_name" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
