--- a/app/src/main/res/layout/fragment_add_new_microaccount.xml
+++ b/app/src/main/res/layout/fragment_add_new_microaccount.xml
@@ -23,7 +23,7 @@
             app:layout_constraintTop_toBottomOf="@+id/ed_txt_role" />
 
         <EditText
-            android:id="@+id/ed_txt_name"
+            android:id="@+id/text_name_new_property"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
@@ -39,8 +39,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/light_grey"
-            app:layout_constraintStart_toStartOf="@+id/ed_txt_name"
-            app:layout_constraintTop_toBottomOf="@+id/ed_txt_name" />
+            app:layout_constraintStart_toStartOf="@+id/text_name_new_property"
+            app:layout_constraintTop_toBottomOf="@+id/text_name_new_property" />
 
         <EditText
             android:id="@+id/ed_txt_role"
@@ -51,7 +51,7 @@
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ed_txt_name" />
+            app:layout_constraintTop_toBottomOf="@+id/text_name_new_property" />
 
         <Button
             android:id="@+id/btn_confirm_NewMicro"
