--- a/app/src/main/res/layout/fragment_add_new_property.xml
+++ b/app/src/main/res/layout/fragment_add_new_property.xml
@@ -13,18 +13,13 @@ android:layout_height="match_parent">
     android:paddingBottom="20dp"
     tools:context=".fragments.transactions.NewTransaction.TransactionNew">
 
-    <Button
-        android:id="@+id/btn_delete_new_stakeholder"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/text_counter_new_property"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/background_buttons_red"
-        android:text="@string/delete"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/btn_confirm"
-        app:layout_constraintTop_toBottomOf="@+id/btn_confirm"
-        tools:visibility="gone" />
+        android:textColor="@color/light_grey"
+        app:layout_constraintStart_toStartOf="@+id/text_name_new_property"
+        app:layout_constraintTop_toBottomOf="@+id/text_name_new_property" />
 
     <TextView
         android:id="@+id/label_stakeholder_new_property"
@@ -33,8 +28,8 @@ android:layout_height="match_parent">
         android:layout_marginTop="40dp"
         android:text="@string/stakeholder"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/ed_txt_name"
-        app:layout_constraintTop_toBottomOf="@+id/ed_txt_name" />
+        app:layout_constraintStart_toStartOf="@+id/text_name_new_property"
+        app:layout_constraintTop_toBottomOf="@+id/text_name_new_property" />
 
     <TextView
         android:id="@+id/text_stakeholder_new_property"
@@ -50,7 +45,7 @@ android:layout_height="match_parent">
         app:layout_constraintTop_toBottomOf="@+id/label_stakeholder_new_property" />
 
     <EditText
-        android:id="@+id/ed_txt_name"
+        android:id="@+id/text_name_new_property"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
