--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/contador_bg"
-    tools:context=".activities.MainActivity">
+    tools:context=".MainActivity">
 
 
     <androidx.appcompat.widget.Toolbar
