--- a/app/src/main/res/layout/fragment_add_new_microaccount.xml
+++ b/app/src/main/res/layout/fragment_add_new_microaccount.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.stakeholders.common.NewStakeholder" >
+    tools:context=".fragments.stakeholders.NewStakeholder" >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frameLayout2"
