--- a/app/src/main/res/layout/fragment_transaction_future_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_future_new.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.stakeholders.contracts.ContractNewSubContract" >
+    tools:context=".fragments.transactions.NewTransaction.FutureTransactionsNew" >
 
     <LinearLayout
         android:layout_width="match_parent"
