--- a/app/src/main/res/layout/fragment_account_settings.xml
+++ b/app/src/main/res/layout/fragment_account_settings.xml
@@ -108,10 +108,10 @@
             app:layout_constraintTop_toBottomOf="@+id/edTextEmailPart" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/delete_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Delete Account"
+            android:text="@string/delete_account"
             android:layout_marginTop="40dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
