Stakeholder shows list of his properties and can navigate to it

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -109,6 +109,9 @@
         <action
             android:id="@+id/action_stakeholderViewPagerHolder_to_newMicroAccount"
             app:destination="@id/newMicroAccount" />
+        <action
+            android:id="@+id/action_stakeholderViewPagerHolder_to_propertyViewPageHolder"
+            app:destination="@id/propertyViewPageHolder" />
     </fragment>
     <fragment
         android:id="@+id/transactionFutureNew"
