--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -198,6 +198,7 @@
         <argument
             android:name="previousFragment"
             app:argType="string"
+            android:defaultValue="@null"
             app:nullable="true" />
         <action
             android:id="@+id/action_propertiesList_to_accountSettings"
