Refactor StakeholdersList, so all recViews with stakeholders use the same fragment and adaptor. Also, included Role and balances.

--- a/app/src/main/res/layout/fragment_all_properties.xml
+++ b/app/src/main/res/layout/fragment_all_properties.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:gravity="center_vertical"
-        android:visibility="visible"
+        android:visibility="gone"
         android:orientation="horizontal"
         android:paddingHorizontal="26dp">
         <TextView
