--- a/app/src/main/res/layout/fragment_transaction_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_new.xml
@@ -185,7 +185,9 @@
             android:layout_weight="1"
             android:checked="true"
             android:paddingVertical="10dp"
-            android:text="@string/cash_in" />
+            android:text="@string/cash_in"
+            android:textSize="18sp"
+            />
 
         <RadioButton
             android:id="@+id/radio_CashOut"
@@ -193,7 +195,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingVertical="10dp"
-            android:text="@string/cash_out" />
+            android:text="@string/cash_out"
+            android:textSize="18sp"/>
 
     </RadioGroup>
 
@@ -236,11 +239,6 @@
         android:text="@string/none"
         android:textColor="@color/white"
         />
-    <TextView
-        android:id="@+id/textView_fillStakeholder"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/light_red_warning"/>
 
     <TextView
         android:id="@+id/actv_stakeholder"
