--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/allTransactions2"
-        android:icon="@drawable/ic_round_analytics_24"
-        android:title="@string/summary"
-        />
+    <item
+        android:id="@+id/allTransactions2"
+        android:icon="@drawable/ic_baseline_home_24"
+        android:title="@string/home" />
     <item android:id="@+id/stakeholders"
         android:icon="@drawable/ic_baseline_people_alt_24"
         android:title="@string/stakeholdersPlural"
