Prevent stakeholder being null when a receivable or payable in new transactions

--- a/app/src/main/res/layout/fragment_transaction_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_new.xml
@@ -241,6 +241,12 @@
         />
 
     <TextView
+        android:id="@+id/textView_stakeholderEmpty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
+    <TextView
         android:id="@+id/actv_stakeholder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
