--- a/app/src/main/res/layout/fragment_all_transactions.xml
+++ b/app/src/main/res/layout/fragment_all_transactions.xml
@@ -13,16 +13,6 @@
     _________________________________________________________________
     _______________________________________________________________-->
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RecViewTransactionsHolder"
-        android:layout_marginTop="8dp"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_container" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main_container"
         android:layout_width="match_parent"
@@ -322,6 +312,122 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="20dp" />
+
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_container">
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/RecViewTransactionsHolder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="2dp" />
+
+        <LinearLayout
+            android:id="@+id/coverLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.7"
+            android:background="@color/light_grey"
+            android:orientation="horizontal"
+            android:visibility="invisible" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_newFAB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="30dp"
+            android:alpha="1"
+            android:contentDescription="@string/settings"
+            app:backgroundTint="@color/fb_color"
+            app:fabCustomSize="60dp"
+            app:maxImageSize="40dp"
+            app:srcCompat="@drawable/ic_baseline_add_24" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_new_ReceivableOrPayable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/btn_newFAB"
+            android:layout_alignEnd="@+id/btn_newFAB"
+            android:layout_alignRight="@+id/btn_newFAB"
+            android:layout_marginBottom="30dp"
+            android:alpha="1"
+            android:contentDescription="@string/settings"
+            android:tint="#F4F4F4"
+            android:visibility="invisible"
+            app:backgroundTint="@color/fb_color"
+            app:fabCustomSize="60dp"
+            app:maxImageSize="40dp"
+            app:srcCompat="@drawable/ic_baseline_add_24" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_new_TransactionFAB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/btn_new_ReceivableOrPayable"
+            android:layout_alignEnd="@+id/btn_newFAB"
+            android:layout_alignRight="@+id/btn_newFAB"
+            android:layout_marginBottom="30dp"
+            android:alpha="1"
+            android:contentDescription="@string/settings"
+            android:tint="#F4F4F4"
+            android:visibility="invisible"
+            app:backgroundTint="@color/fb_color"
+            app:fabCustomSize="60dp"
+            app:maxImageSize="40dp"
+            app:srcCompat="@drawable/ic_baseline_add_24" />
+
+
+        <TextView
+            android:id="@+id/text_fabNewTransaction"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/btn_new_TransactionFAB"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_toStartOf="@+id/btn_new_TransactionFAB"
+            android:layout_toLeftOf="@+id/btn_new_TransactionFAB"
+            android:background="@drawable/backgorund_fab_titles"
+            android:padding="10dp"
+            android:text="@string/add_transaction"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/text_fabReceivable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/btn_new_ReceivableOrPayable"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_toStartOf="@+id/btn_new_ReceivableOrPayable"
+            android:layout_toLeftOf="@+id/btn_new_ReceivableOrPayable"
+            android:background="@drawable/backgorund_fab_titles"
+            android:padding="10dp"
+            android:text="@string/add_future_transaction"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:visibility="invisible" />
+
+
+    </RelativeLayout>
 
 
     <!--<androidx.constraintlayout.widget.ConstraintLayout
