--- a/app/src/main/res/layout/fragment_add_new_account.xml
+++ b/app/src/main/res/layout/fragment_add_new_account.xml
@@ -16,6 +16,14 @@
         android:paddingVertical="30dp"
         >
 
+        <TextView
+            android:id="@+id/txt_balance_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/light_grey"
+            app:layout_constraintStart_toStartOf="@+id/ed_txt_starting_balance"
+            app:layout_constraintTop_toBottomOf="@+id/ed_txt_starting_balance" />
+
         <EditText
             android:id="@+id/ed_txt_name_Account"
             android:layout_width="match_parent"
@@ -26,6 +34,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
+
+        <TextView
+            android:id="@+id/txt_account_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/light_grey"
+            app:layout_constraintStart_toStartOf="@+id/ed_txt_name_Account"
+            app:layout_constraintTop_toBottomOf="@+id/ed_txt_name_Account" />
 
         <EditText
             android:id="@+id/ed_txt_starting_balance"
