--- a/app/src/main/res/layout/month_year_picker.xml
+++ b/app/src/main/res/layout/month_year_picker.xml
@@ -31,12 +31,13 @@
 
     <NumberPicker
         android:id="@+id/picker_month"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/picker_year"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        android:descendantFocusability="blocksDescendants"
         app:layout_constraintTop_toTopOf="parent" />
 
     <NumberPicker
@@ -46,6 +47,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        android:descendantFocusability="blocksDescendants"
         app:layout_constraintStart_toEndOf="@+id/picker_month"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.517" />
