--- a/app/src/main/res/layout/fragment_transaction_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_new.xml
@@ -166,6 +166,7 @@
     <TextView
         android:id="@+id/textView_fillAmount"
         android:layout_width="match_parent"
+        android:textColor="@color/light_grey"
         android:layout_height="wrap_content"
         />
 
