--- a/app/src/main/res/layout/fragment_all_transactions.xml
+++ b/app/src/main/res/layout/fragment_all_transactions.xml
@@ -43,7 +43,7 @@
         android:contentDescription="@string/settings"
         android:paddingHorizontal="15dp"
         android:paddingLeft="5dp"
-        android:text="September 2021"
+        android:text="@string/loading"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/text_selectedMonthFix"
         app:layout_constraintStart_toStartOf="@id/guideline12"
