--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,15 +3,21 @@
     <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:textColor">@color/button</item>
     </style>
+    <style name="dropMenu" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:textColor">@color/white</item>
+        <item name="colorPrimary">#cc9966</item>
+        <item name="colorPrimaryVariant">#3700B3</item>
+        <item name="colorOnPrimary">#000000</item>
+        <item name="colorSecondary">#cc6699</item>
+        <item name="colorSecondaryVariant">#000000</item>
+        <item name="colorOnSecondary">#000000</item>
+        <item name="colorAccent">#66cc99</item>
 
-    <style name="dropMenu" parent="@android:style/TextAppearance">
-        <item name="colorControlNormal">@color/white</item>
-        <item name="colorControlActivated">@color/contador_red</item>
-        <item name="colorControlHighlight">@color/button</item>
+
+
     </style>
     <style name="Autocomplete">
         <item name="colorControlNormal">@color/black</item>
         <item name="colorControlActivated">@color/black</item>
     </style>
-
 </resources>
