--- a/app/src/main/res/layout/fragment_account_settings.xml
+++ b/app/src/main/res/layout/fragment_account_settings.xml
@@ -49,13 +49,12 @@
             android:id="@+id/textView15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+
             android:text="@string/Accounts_participants"
-            android:layout_marginTop="50dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/textAccountName"
             app:layout_constraintTop_toBottomOf="@+id/textAccountName" />
-
 
         <EditText
             android:id="@+id/edTextEmailPart"
@@ -80,9 +79,10 @@
             android:id="@+id/linearLayout6"
             android:layout_width="match_parent"
             android:layout_height="300dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/background_accounts_first"
             android:orientation="horizontal"
             android:padding="5dp"
-            android:background="@drawable/background_accounts_first"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView15">
