--- a/app/src/main/res/layout/rec_view_item_all_micros.xml
+++ b/app/src/main/res/layout/rec_view_item_all_micros.xml
@@ -65,7 +65,7 @@
             android:ellipsize="end"
             android:gravity="start"
             android:maxLines="3"
-            android:text="Bodega 2 y 5"
+            android:visibility="gone"
             android:textSize="15sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintHorizontal_bias="1.0"
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.7" />
+            app:layout_constraintGuide_percent="0.65" />
 
         <TextView
             android:layout_marginTop="10dp"
